# desafio_lacrei_saude

./: README.md  pyproject.toml  requirements.txt
projeto_api_consulta_medica/: manage.py
projeto_api_consulta_medica/app_api_consulta_medica/: apps.py  docker-compose.yml  models.py  serializers.py  tests.py  urls.py  views.py
projeto_api_consulta_medica/projeto_api_consulta_medica/: asgi.py  settings.py  urls.py  wsgi.py
